public class Professor extends Usuario {
    
    private Disciplina[] disciplinas;
    
    public Aluno[] consultarAlunos(Disciplina disciplina){
        Aluno[] arrayExemplo = new Aluno[2];
        return arrayExemplo;
}
